testsuite/tests/properties/invalid_eq/correct_entity_subclass.lkt
import common

class Example: FooNode {
    @exported fun prop(): Bool = self.parent == self
}
